--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div data-aos="fade-down" data-aos-duration="1800">
 <section id="description-box">
     <div id="description-text">hey! I'm Darío, an UX/UI designer with a touch of creativity and a pinch of craziness. I love exploring new ideas and trends, experimenting with colors, shapes and textures, and creating unique and unforgettable experiences for users.</div>
-    <div id="description-photo-box"><div id="profile-photo"></div><div class="button">my.linkedin
-        </div>
+    <div id="description-photo-box"><div id="profile-photo"></div><a target="_blank" href="https://www.youtube.com/watch?v=ZZ5LpwO-An4"><div class="button">my.linkedin
+        </div></a>
 </section></div></main>
 <h1>my.principles</h1>
 <section id="principles">
@@ -53,8 +53,8 @@
 <section id="projects">
     <div data-aos="fade-right" data-aos-delay="300" data-aos-duration="1300">
     <article class="project-container">
-        <section class="project-box"><img class="project-list-img" src="img/project_hoovey.png"></section><section class="project-content"><div class="project-title">Hoovey</div><div class="project-desc"><p>Hoovey allows you to create a budget and track your expenses, so you can identify areas where you can cut back on spending. You can also set savings goals and monitor your progress towards achieving them. The app even helps you plan for unexpected expenses by setting aside a portion of your savings each month.</p> </div><div class="button">view.project
-        </div></section>
+        <section class="project-box"><img class="project-list-img" src="img/project_hoovey.png"></section><section class="project-content"><div class="project-title">Hoovey</div><div class="project-desc"><p>Hoovey allows you to create a budget and track your expenses, so you can identify areas where you can cut back on spending. You can also set savings goals and monitor your progress towards achieving them. The app even helps you plan for unexpected expenses by setting aside a portion of your savings each month.</p> </div><a target="_blank" href="https://www.youtube.com/watch?v=ZZ5LpwO-An4"><div class="button">view.project
+        </div></a></section>
     </article>
 </div>
 <div data-aos="fade-left" data-aos-delay="300" data-aos-duration="1300">
